fixed spacing on search page

--- a/client/src/scss/search/search.scss
+++ b/client/src/scss/search/search.scss
@@ -10,10 +10,6 @@
   color: $primary-light;
 }
 
-.gray-border {
-  border-bottom: 1px solid transparent;
-}
-
 @media only screen and(max-width: 699px) {
     #search-container {
         display: flex;
